[gd_scene load_steps=9 format=3 uid="uid://dcolnwjotxtb2"]

[ext_resource type="Script" path="res://scripts/bgm_control.gd" id="1_rqhjl"]
[ext_resource type="PackedScene" uid="uid://8rdpyfdcv1su" path="res://scenes/menu_scenes/finish_level_scene.tscn" id="2_7bpyi"]
[ext_resource type="PackedScene" uid="uid://b20113doycxsj" path="res://scenes/time_bar.tscn" id="2_khu76"]
[ext_resource type="PackedScene" uid="uid://brxxx8y3r58tv" path="res://scenes/score_display.tscn" id="3_jcfk2"]
[ext_resource type="PackedScene" uid="uid://dceaa3fvt7vsw" path="res://scenes/combo_label.tscn" id="3_l633o"]
[ext_resource type="PackedScene" uid="uid://dqo2dmq5e7cdq" path="res://models/pop-it-3d.blend" id="3_s2d3e"]
[ext_resource type="Script" path="res://scripts/popit-arcade1.gd" id="4_je2bt"]
[ext_resource type="Material" uid="uid://biid58nhbbja7" path="res://materials/Material.tres" id="5_kmen3"]

[node name="popit_arcade" type="Node3D"]
script = ExtResource("1_rqhjl")

[node name="FinishLevelScene" parent="." instance=ExtResource("2_7bpyi")]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Combo_Label" parent="CanvasLayer" instance=ExtResource("3_l633o")]

[node name="Score_Display" parent="CanvasLayer" instance=ExtResource("3_jcfk2")]

[node name="Time_Bar" parent="CanvasLayer" instance=ExtResource("2_khu76")]

[node name="pop-it-3d" parent="." instance=ExtResource("3_s2d3e")]
script = ExtResource("4_je2bt")
transl_mat = ExtResource("5_kmen3")

[node name="1_001" parent="pop-it-3d/1" index="0"]
gi_mode = 2

[node name="1_004" parent="pop-it-3d/2" index="0"]
gi_mode = 2

[node name="1_003" parent="pop-it-3d/3" index="0"]
gi_mode = 2

[node name="1_008" parent="pop-it-3d/4" index="0"]
gi_mode = 2

[node name="1_010" parent="pop-it-3d/5" index="0"]
gi_mode = 2

[node name="1_012" parent="pop-it-3d/6" index="0"]
gi_mode = 2

[node name="1_014" parent="pop-it-3d/7" index="0"]
gi_mode = 2

[node name="1_016" parent="pop-it-3d/8" index="0"]
gi_mode = 2

[node name="1_018" parent="pop-it-3d/9" index="0"]
gi_mode = 2

[node name="1_020" parent="pop-it-3d/10" index="0"]
gi_mode = 2

[editable path="FinishLevelScene"]
[editable path="pop-it-3d"]
