[gd_scene load_steps=9 format=3 uid="uid://mtkepj6dl406"]

[ext_resource type="Script" path="res://scripts/bgm_control.gd" id="1_dack5"]
[ext_resource type="PackedScene" uid="uid://dqo2dmq5e7cdq" path="res://models/pop-it-3d.blend" id="1_esr1d"]
[ext_resource type="PackedScene" uid="uid://b20113doycxsj" path="res://scenes/time_bar.tscn" id="2_dyksv"]
[ext_resource type="PackedScene" uid="uid://8rdpyfdcv1su" path="res://scenes/menu_scenes/finish_level_scene.tscn" id="2_j7jbe"]
[ext_resource type="PackedScene" uid="uid://dceaa3fvt7vsw" path="res://scenes/combo_label.tscn" id="3_4mb8j"]
[ext_resource type="PackedScene" uid="uid://brxxx8y3r58tv" path="res://scenes/score_display.tscn" id="3_ceemb"]
[ext_resource type="Material" uid="uid://biid58nhbbja7" path="res://materials/Material.tres" id="3_sllnc"]
[ext_resource type="Script" path="res://scripts/popit-arcade2.gd" id="4_j1rt8"]

[node name="popit_arcade_plus" type="Node3D"]
script = ExtResource("1_dack5")

[node name="FinishLevelScene" parent="." instance=ExtResource("2_j7jbe")]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Combo_Label" parent="CanvasLayer" instance=ExtResource("3_4mb8j")]

[node name="Score_Display" parent="CanvasLayer" instance=ExtResource("3_ceemb")]

[node name="Time_Bar" parent="CanvasLayer" instance=ExtResource("2_dyksv")]

[node name="pop-it-3d" parent="." instance=ExtResource("1_esr1d")]
script = ExtResource("4_j1rt8")
transl_mat = ExtResource("3_sllnc")

[node name="1_001" parent="pop-it-3d/1" index="0"]
gi_mode = 2

[node name="1_004" parent="pop-it-3d/2" index="0"]
gi_mode = 2

[node name="1_003" parent="pop-it-3d/3" index="0"]
gi_mode = 2

[node name="1_008" parent="pop-it-3d/4" index="0"]
gi_mode = 2

[node name="1_010" parent="pop-it-3d/5" index="0"]
gi_mode = 2

[node name="1_012" parent="pop-it-3d/6" index="0"]
gi_mode = 2

[node name="1_014" parent="pop-it-3d/7" index="0"]
gi_mode = 2

[node name="1_016" parent="pop-it-3d/8" index="0"]
gi_mode = 2

[node name="1_018" parent="pop-it-3d/9" index="0"]
gi_mode = 2

[node name="1_020" parent="pop-it-3d/10" index="0"]
gi_mode = 2

[editable path="FinishLevelScene"]
[editable path="pop-it-3d"]
