[gd_scene load_steps=6 format=3 uid="uid://borea6tx3cxpq"]

[ext_resource type="Script" path="res://scripts/bgm_control.gd" id="1_ijwxh"]
[ext_resource type="PackedScene" uid="uid://dceaa3fvt7vsw" path="res://scenes/combo_label.tscn" id="2_808lv"]
[ext_resource type="PackedScene" uid="uid://dqo2dmq5e7cdq" path="res://models/pop-it-3d.blend" id="3_ss3hy"]
[ext_resource type="Script" path="res://scripts/popit-fidget.gd" id="4_qonqp"]
[ext_resource type="Material" uid="uid://biid58nhbbja7" path="res://materials/Material.tres" id="5_8e7or"]

[node name="popit_fidget" type="Node3D"]
script = ExtResource("1_ijwxh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Combo_Label" parent="CanvasLayer" instance=ExtResource("2_808lv")]

[node name="pop-it-3d" parent="." instance=ExtResource("3_ss3hy")]
script = ExtResource("4_qonqp")
transl_mat = ExtResource("5_8e7or")

[node name="1_001" parent="pop-it-3d/1" index="0"]
gi_mode = 2

[node name="1_004" parent="pop-it-3d/2" index="0"]
gi_mode = 2

[node name="1_003" parent="pop-it-3d/3" index="0"]
gi_mode = 2

[node name="1_008" parent="pop-it-3d/4" index="0"]
gi_mode = 2

[node name="1_010" parent="pop-it-3d/5" index="0"]
gi_mode = 2

[node name="1_012" parent="pop-it-3d/6" index="0"]
gi_mode = 2

[node name="1_014" parent="pop-it-3d/7" index="0"]
gi_mode = 2

[node name="1_016" parent="pop-it-3d/8" index="0"]
gi_mode = 2

[node name="1_018" parent="pop-it-3d/9" index="0"]
gi_mode = 2

[node name="1_020" parent="pop-it-3d/10" index="0"]
gi_mode = 2

[editable path="pop-it-3d"]
